Replace Makefile with format.py for code quality
- Remove Makefile (replaced with simpler format.py script)
- format.py uses autoflake and black for code formatting
- Configured for 120 character line length
- Run with: python format.py
- More pythonic approach than Makefile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Omar Zapata", email = "omazapa@cern.ch"}
+    {name = "Omar Zapata", email = "Omar.Zapata@cern.ch"}
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
