Add CLI arguments and download command wrappers
- Add argparse support to index_root_docs.py with configurable options:
  * --data-path: Path to ROOT documentation (default: etl/root/data/root/master)
  * --es-host: Elasticsearch URL (default: http://localhost:9200)
  * --index-name: Index name (default: root-documentation)
  * --model-name: Sentence transformer model (default: all-MiniLM-L6-v2)
  * --enable-chunking: Enable document chunking flag
  * --batch-size: Indexing batch size (default: 100)
  * --num-workers: Parallel workers (default: CPU count)

- Create Python wrappers for bash download scripts:
  * etl/root/download_root_docs.py: ROOT documentation downloader
  * etl/geant4/download_geant4_docs.py: Geant4 Sphinx downloader
  * Both support --output-dir for custom paths

- Update pyproject.toml with 9 console scripts:
  * hep-rag-download-root, hep-rag-index-root, hep-rag-search-root
  * hep-rag-download-geant4, hep-rag-index-geant4, hep-rag-search-geant4
  * hep-rag-download-geant4-doxygen, hep-rag-index-geant4-doxygen
  * hep-rag-search-geant4-doxygen, hep-rag-validate-root-urls

Verified:
✅ Package installs correctly (pip install -e .)
✅ All 9 commands available and working
✅ Help messages display properly
✅ Code formatting checked (black + autoflake)
✅ No unused imports detected
✅ Elasticsearch connection verified (8.17.4)
✅ ROOT data present (18K+ documents indexed)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,17 @@ Repository = "https://github.com/omazapa/hep_rag_service"
 Issues = "https://github.com/omazapa/hep_rag_service/issues"
 
 [project.scripts]
+# ROOT commands
+hep-rag-download-root = "etl.root.download_root_docs:main"
 hep-rag-index-root = "etl.root.index_root_docs:main"
 hep-rag-search-root = "etl.root.search_root_docs:main"
+hep-rag-validate-root-urls = "etl.root.validate_urls:main"
+# Geant4 Sphinx commands
+hep-rag-download-geant4 = "etl.geant4.download_geant4_docs:main"
 hep-rag-index-geant4 = "etl.geant4.index_geant4_docs:main"
 hep-rag-search-geant4 = "etl.geant4.search_geant4_docs:main"
+# Geant4 Doxygen commands
+hep-rag-download-geant4-doxygen = "etl.geant4.download_geant4_doxygen:main"
 hep-rag-index-geant4-doxygen = "etl.geant4.index_geant4_doxygen:main"
 hep-rag-search-geant4-doxygen = "etl.geant4.search_geant4_doxygen:main"
 
