Add LangChain agents and MCP server with agent support
- Add LangChain-based agents with different personas (user/developer/teacher)
- Implement HEP documentation indexer with LangChain
- Create MCP server with agent integration (server_with_agents.py)
- Add comprehensive README documentation for agents
- Update dependencies to include LangChain ecosystem
- Add installation complete documentation
- Add test script for MCP agents integration
- Update main README with agent features
- Configure pyproject.toml with new agent entry point

--- a/hep_mcp_doc/pyproject.toml
+++ b/hep_mcp_doc/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
 
 [project.scripts]
 hep-mcp-doc = "hep_mcp_doc.server:main"
+hep-mcp-doc-agents = "hep_mcp_doc.server_with_agents:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
