Add source references to agents and interactive RAG interface
- Agents now return dict with 'answer' and 'sources' keys
- Add source references with title, URL, and content preview
- Update prompts to instruct LLM to cite sources using [1], [2], etc.
- Create interactive RAG script (interactive_rag.py) with 4 agent modes:
  - User Agent: Practical help for ROOT users
  - Developer Agent: Expert technical guidance
  - Teacher Agent: Educational explanations
  - Direct Search: Raw retrieval without LLM
- Add test script for verifying agent responses (test_agents_with_sources.py)
- Update all examples and documentation to show new response format
- Add comprehensive agent response format documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,14 @@ langchain-elasticsearch>=0.4.0
 langchain-huggingface>=1.1.0
 langchain-community>=0.4.1
 
-# Procesamiento de HTML
+# HTML processing
 beautifulsoup4
 lxml
 
-# Utilidades
+# Utilities
 tqdm
 python-dotenv
 
-# Opcional: para notebooks
+# Optional: for notebooks
 jupyter
 ipykernel
