--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "langchain-elasticsearch>=0.3.0",
     "langchain-huggingface>=0.1.0",
     "langchain-community>=0.3.0",
+    "langchain-ollama>=0.1.0",
 ]
 
 [project.optional-dependencies]
