--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ langchain>=1.1.0
 langchain-elasticsearch>=0.4.0
 langchain-huggingface>=1.1.0
 langchain-community>=0.4.1
+langchain-ollama>=0.1.0
 
 # HTML processing
 beautifulsoup4
